# splent_cli

./: .coverage  .env.example  .gitignore  .gitmodules  Makefile  README.md  entrypoint.sh  package.json  pyproject.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci-commits.yml  ci-lint.yml
docker/: docker-compose.yml
docker/entrypoints/: cli-entrypoint.sh
docker/images/: Dockerfile.cli
makefiles/: Makefile.cli  Makefile.setup
rosemary/: __main__.py  cli.py
rosemary/commands/: clear_cache.py  clear_log.py  clear_uploads.py  compose_env.py  coverage.py  db_dump.py  db_reset.py  db_seed.py  env.py  info.py  linter.py  locust.py  module_create.py  module_list.py  selenium.py  webpack_compile.py
rosemary/templates/: module_init.py.j2  module_repositories.py.j2  module_seeders.py.j2  module_services.py.j2  module_tests_locustfile.py.j2  module_tests_test_selenium.py.j2
rosemary/utils/: path_utils.py
scripts/: env_tools.sh  preflight_cli.sh  setup_prompt.sh
splent_cli/templates/: module_init.py.j2  module_models.py.j2  module_routes.py.j2  module_seeders.py.j2  module_services.py.j2  module_tests_locustfile.py.j2  module_tests_test_selenium.py.j2  module_webpack.config.js.j2
src/splent_cli/: __init__.py  __main__.py  cli.py
src/splent_cli/commands/: clear_cache.py  clear_features.py  clear_log.py  clear_uploads.py  command_create.py  coverage.py  db_reset.py  db_seed.py  doctor.py  export_puml.py  feature_compile.py  feature_create.py  feature_fork.py  feature_list.py  (+23 more)
tests/: conftest.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_compose_normalize.py  test_product_env_merge.py
(+333 files in other folders)
